Fixed mobile navbar and turned off horizontal scrolling.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body, html {
     margin-right: auto;
     margin-left: auto;
     display: block;
-    padding: 2em;
+    padding: 2em 0em;
+    overflow: hidden;
     max-width: 1375px;
 }
 
@@ -80,6 +81,12 @@ img {
     color: #000000;
     margin: 1em;
     padding: 1em;
+}
+
+@media screen and (max-width: 800px) {
+    .navbar a {
+        margin: 1em 0em;
+    }
 }
 
 .navbar a:hover {
